提及到贷贷

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.17.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.1.0.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -35,6 +34,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<!--
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+			-->
 		</dependency>
 
 		<!--MySQL JDBC驱动-->
@@ -83,6 +90,15 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
+
+		<!-- 排除tomct -->
+		<!--
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		-->
 	</dependencies>
 
 	<build>
@@ -104,5 +120,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<finalName>appversion</finalName>
 	</build>
 </project>
