修改上传文件大小限制

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,6 @@ mybatis:
   type-aliases-package: com.datasensor.fish.appversion.model  # 注意：对应实体类的路径
 
 application:
-  imagesPath: F:\\tmp
+  imagesPath: /usr/local/appversion/headface
   storeFilePath: /usr/local/appversion
   base-packages:  com.datasensor.fish.appversion
